# World_Models_LAS

./: .gitignore  AGENTS.md  DREAMER_R2_FINETUNE_SPEC.md  LOCAL_GLOBAL_DINO_WM_IMPLEMENTATION_SPEC.md  Makefile  README.md  REPO_BOOTSTRAP_SPEC.md  REPRODUCIBILITY.md  commands.md  data_manifest.md  pyproject.toml  requirements-dev.txt
configs/: paths.env.example
configs/dino_wm/: README.md  base.yaml  planner_cem_vs_gd_pointmaze.yaml  pointmaze_example.yaml  (+15 more)
docs/: dino_wm_full_training_throughput_conclusion.md  dino_wm_latent_cache_training.md  dino_wm_safe_intra_epoch_checkpointing_handoff.md  live_notebook_monitoring.md  local_global_methodology.md  local_global_runbook_next_steps.md  local_global_techniques.md  notebook_policy.md  r2dreamer_finetune.md  r2dreamer_visualization_handoff.md  release_checklist.md
notebooks/: 00_colab_setup.ipynb  01_r2dreamer_foundation.ipynb  02_dino_wm_foundation.ipynb  03_local_global_foundation.ipynb  07_dino_wm_results.ipynb  08_local_global_results.ipynb
reports/: README.md  artifact_manifest.json  dino_wm_pointmaze_summary.csv  local_global_planning_summary.csv  make_planning_figures.py  make_planning_table.py  pointmaze_planning_logs_200evals.csv  pointmaze_planning_logs_50evals.csv  r2dreamer_summary.csv  world_models_report.tex
scripts/: check_notebook_errors.py  check_release_markers.py  clone_external_repos.sh  collect_system_info.py  create_drive_tree.py  download_dino_wm_data_placeholder.sh  make_empty_run_manifest.py  read_lock.py  verify_drive_layout.py  verify_environment.py
tests/: conftest.py  test_dino_wm.py  test_manifests.py  test_paths.py  test_r2dreamer_checkpoint_verifier.py  test_r2dreamer_command_builder.py  test_r2dreamer_metrics_parser.py  test_r2dreamer_notebook_monitor.py  test_r2dreamer_patch.py  test_r2dreamer_visualization.py  test_report_csvs.py
(+138 files in other folders)
